# unzig

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  test.zig
cmake/: unzig.cmake
codegen/: codegen.hpp.j2  dotgen.hpp.j2  generate.py  sema.hpp.j2
examples/: test  test.dot  test.ll  test.uz
llvmir/: 1.c  1.ll  build.sh
spec/: grammar.y  syntax.uz  syntax.zig  validate.sh
src/: ast.cpp  ast.hpp  ast_equality_comparator.cpp  ast_equality_comparator.hpp  ast_node.hpp  cmd.cpp  codegen.cpp  codegen.hpp  compiler.cpp  context.cpp  context.hpp  dotgen.cpp  dotgen.hpp  dotgen_cmd.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  sema.cpp  sema.hpp  semantic_analysis.hpp  semantic_analyzer.hpp  source.cpp  source.hpp  symbol.hpp  tokenizer.cpp  tokenizer.hpp  types.cpp  types.hpp  unzig.cpp  unzig_cmd.cpp
test/: code_example.hpp  test.cpp  test_and.uz  test_args.uz  test_codegen.cpp  test_dotgen.cpp  test_dotgen.sh  test_main.uz  test_negation.uz  test_negative_numbers.uz  test_or.uz  test_parser.cpp  test_scope.cpp  test_sema.cpp  test_tokenizer.cpp  test_unzig_bool_ops.uz  test_unzig_main.uz
